fixing the issue with the time and location section being too small

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -66,7 +66,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 30%;
+  width: 50%;
   color: #122149;
   font-size: 1.1em;
   font-weight: bold;
